# wechat

./: README.md  package-lock.json  package.json
client/: baselistitem.cpp  baselistitem.h  basemessageitem.cpp  basemessageitem.h  bubbleframe.cpp  bubbleframe.h  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatpage.cpp  chatpage.h  chatpage.ui  chatviewarea.cpp  chatviewarea.h  chatviewarea.ui  clickablelabel.cpp  clickablelabel.h  customized_button.cpp  customized_button.h  customized_editline.cpp  customized_editline.h  customized_label.cpp  customized_label.h  customized_textedit.cpp  customized_textedit.h  forgetlabel.cpp  forgetlabel.h  global.cpp  global.h  httpmanager.cpp  httpmanager.h  llfc_client.pro  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pictureframe.cpp  (+22 more)
client/style/: style.qss
server/ChatServer/: CMakeLists.txt  config.ini
server/ChatServer/include/: CServer.h  CSession.h  ConfigIniManager.h  LogicSystem.h  MessageNode.h  MysqlDAO.h  MysqlManager.h  RedisManager.h  Singleton.h  StatusGrpcClient.h  config.h
server/ChatServer/proto/: message.grpc.pb.cc  message.grpc.pb.h  message.pb.h  message.proto
server/ChatServer/source/: AsioIOContextPool.cpp  CServer.cpp  CSession.cpp  ChatServer.cpp  LogicSystem.cpp  MessageNode.cpp  MysqlDAO.cpp  MysqlManager.cpp  StatusGrpcClient.cpp
server/GateServer/: CMakeLists.txt  config.ini
server/GateServer/include/: AsioIOContextPool.h  CServer.h  HttpConnection.h  LogicSystem.h  MysqlDAO.h  MysqlManager.h  RedisManager.h  Singleton.h  StatusGrpcClient.h  VerifygRPCClient.h  config.h
server/GateServer/proto/: message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
server/GateServer/resource/: AsioIOContextPool.cpp  CServer.cpp  ConfigIniManager.cpp  GateServer.cpp  HttpConnection.cpp  LogicSystem.cpp  MysqlDAO.cpp  MysqlManager.cpp  RedisManager.cpp  StatusGrpcClient.cpp  VerifygRPCClient.cpp
server/StatusServer/: CMakeLists.txt
server/StatusServer/include/: AsioIOContextPool.h  ConfigIniManager.h  MysqlDAO.h  MysqlManager.h  StatusServiceImpl.h  config.h
server/StatusServer/proto/: message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
server/StatusServer/source/: AsioIOContextPool.cpp  ConfigIniManager.cpp  MysqlDAO.cpp  RedisManager.cpp  StatusServer.cpp  StatusServiceImpl.cpp
server/VerifyServer/: config.js  config.json  const.js  email.js  message.proto  package-lock.json  package.json  proto.js  redis.js  server.js
